<resources>
    <string name="app_name">Repair App</string>

    <string name="first_name">Ime</string>
    <string name="last_name">Priimek</string>
    <string name="email">Elektronski naslov</string>
    <string name="phone_number">Telefonska številka</string>
    <string name="username">Uporabniško ime</string>
    <string name="password">Geslo</string>
    <string name="password_repeat">Ponovno geslo</string>
    <string name="login">Prijava</string>
    <string name="register">Registracija</string>
    <string name="workers">Serviserji</string>
    <string name="tasks">Opravila</string>

    <string-array name="worker_status">
        <item>Vodja</item>
        <item>Serviser</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>